FEATURE:	Added new GDISP types gRect and gArea
CHANGE:		GFXON and GFXOFF replaces TRUE/FALSE for configuration options
CHANGE:		GTrue and GFalse replaces TRUE/FALSE for the bool_t type
CHANGE:		GFXBLACK, GFXWHITE, GFXRED etc replace the old color definitions Black, White, Red etc
CHANGE:		gColor, gPixel & gPoint replace old types color_t, pixel_t, point & point_t
DEPRECATED:	Deprecated TRUE/FALSE macro constants [still available with GFX_COMPAT_V2]
DEPRECATED:	Deprecated color constants Red, Green etc [still available with GFX_COMPAT_V2 && GFX_COMPAT_OLDCOLORS]
DEPRECATED:	Deprecated types color_t, pixel_t, point, point_t [still available with GFX_COMPAT_V2]


*** Changes after 2.7 ***
FEATURE:	Added support for 128x32 SSD1306 based displays
FIX:		Fixed recursion bug in console history
FIX:		Multithreading issue with slow window redraws and large images
FIX:		Ensure valid thread stack sizes on platforms where it matters
FEATURE:	Added support for a GFILE user provided file system
FEATURE:	Added gwinListItemSetText() to replace text in a GWIN list item
FEATURE:	Added GDISP_IMAGE_BMP_BLIT_BUFFER_SIZE configuration option
FEATURE:	Added GDISP_IMAGE_PNG_BLIT_BUFFER_SIZE configuration option
FEATURE:	Added GDISP_IMAGE_PNG_FILE_BUFFER_SIZE configuration option
FEATURE:	Added GDISP_IMAGE_PNG_Z_BUFFER_SIZE configuration option
FEATURE:	Added GDISP_IMAGE_GIF_BLIT_BUFFER_SIZE configuration option
FIX:		Fixed extra dots when drawing anti-aliased fonts with wordwrap
FEATURE:	Increase non-UTF8 font support to 0 to 255 rather than just the true ascii set
FEATURE:	Added Fb24bpp driver for RGB888 and BGR888 packed framebuffer displays
FEATURE:	Added UC8173 driver
FEATURE:	Added complete support for Altera Terasic MAX10 NEEK board


*** Release 2.7 ***
FEATURE:	Added EXC7200 driver
FEATURE:	Added STM32F439i-EVAL board files
FIX:		Fixed crash when passing NULL to gwinSetStyle()
FIX:		Fixed potential crash when GDISP_NEED_TEXT_WORDWRAP is turned on
FEATURE:	Added SDL driver