@@ -61,6 +61,8 @@
 //    #define GFX_OS_PRE_INIT_FUNCTION                 myHardwareInitRoutine
 //    #define GFX_OS_EXTRA_INIT_FUNCTION               myOSInitRoutine
 //    #define GFX_OS_EXTRA_DEINIT_FUNCTION             myOSDeInitRoutine
+//    #define GFX_OS_CALL_UGFXMAIN                     (!GFX_COMPAT_V2)
+//    #define GFX_OS_UGFXMAIN_STACKSIZE                0
 //    #define GFX_EMULATE_MALLOC                       GFXOFF
 
 
