@@ -11,6 +11,7 @@ CHANGE:		GFXON and GFXOFF replaces TRUE/FALSE for configuration options
 CHANGE:		GTrue and GFalse replaces TRUE/FALSE for the bool_t type
 CHANGE:		GFXBLACK, GFXWHITE, GFXRED etc replace the old color definitions Black, White, Red etc
 CHANGE:		gColor, gPixel & gPoint replace old types color_t, pixel_t, point & point_t
+CHANGE:		Config option GFX_OS_CALL_UGFXMAIN defaults to GFXON if GFX_COMPAT_V2 is not set
 DEPRECATED:	Deprecated TRUE/FALSE macro constants [still available with GFX_COMPAT_V2]
 DEPRECATED:	Deprecated color constants Red, Green etc [still available with GFX_COMPAT_V2 && GFX_COMPAT_OLDCOLORS]
 DEPRECATED:	Deprecated types color_t, pixel_t, point, point_t [still available with GFX_COMPAT_V2]
@@ -33,6 +34,10 @@ FEATURE:	Increase non-UTF8 font support to 0 to 255 rather than just the true as
 FEATURE:	Added Fb24bpp driver for RGB888 and BGR888 packed framebuffer displays
 FEATURE:	Added UC8173 driver
 FEATURE:	Added complete support for Altera Terasic MAX10 NEEK board
+FEATURE:	Significantly improved the FreeRTOS port
+FEATURE:	Added support for operating system initialisation in FreeRTOS
+FEATURE:	Added GFX_OS_CALL_UGFXMAIN configuration option to allow uGFXMain() to be automatically called
+FEATURE:	Added GFX_OS_UGFXMAIN_STACKSIZE configuration option to control uGFXMain() stack size
 
 
 *** Release 2.7 ***
